[tool.poetry]
name = "solmate"
version = "0.1.0"
description = ""
authors = ["Nima Hamidi <hamidi@alumni.stanford.edu>"]

[tool.poetry.dependencies]
python = "^3.9"
solana = "^0.19.0"
argparse = "^1.4.0"
podite = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
black = "^21.12b0"
mypy = "^0.930"
pylint = "^2.12.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
solmate = "solmate.cli:main"
